# clawtunes

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release-homebrew.yml
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/commands/: now-playing.md
plugin/claude-code/skills/playlist-curation/: SKILL.md
src/apple_music/: __init__.py  applescript.py  catalog.py  client.py  playback.py  status.py
src/clawtunes/: cli.py  selection.py
tests/: test_catalog.py  test_cli.py  test_playback.py
