[project]
name = "clawtunes"
version = "0.2.1"
description = "A CLI app to control Apple Music"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
clawtunes = "clawtunes.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawtunes", "src/apple_music"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py312"]
